--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,6 @@
-<p>home works!</p>
+<app-header></app-header>
+<app-search></app-search>
+<app-course-list>
+  <app-load-more></app-load-more>
+</app-course-list>
+<app-footer></app-footer>
