--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,12 @@
-<app-header></app-header>
-<app-search></app-search>
-<app-course-list>
-  <app-load-more></app-load-more>
-</app-course-list>
-<app-footer></app-footer>
+<div class="app-container">
+  <app-header></app-header>
+  <div class="app-content">
+    <app-search></app-search>
+    <app-course-list>
+      <app-load-more></app-load-more>
+    </app-course-list>
+  </div>
+  <div class="app-footer">
+    <app-footer></app-footer>
+  </div>
+</div>
