--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -5,9 +5,8 @@
 }
 
 .app-content {
-  background-color: #932f2f;
   flex: 1;
-  padding-bottom: 104px;
+  padding: 0 104px;
 }
 
 .app-footer {
@@ -20,4 +19,9 @@
   font-weight: 400;
   font-size: 15px;
   line-height: 24px;
+}
+
+.content-field {
+  background-color: #FFFFFF;
+  height: calc(100vh - 168px);
 }
