--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,11 @@
 <div class="app-container">
   <app-header></app-header>
   <div class="app-content">
-    <app-search></app-search>
-    <app-course-list>
+    <div class="content-field">
+      <app-search></app-search>
+      <app-course-list></app-course-list>
       <app-load-more></app-load-more>
-    </app-course-list>
+    </div>
   </div>
   <div class="app-footer">
     <app-footer></app-footer>
