task 2 is in progress

--- a/src/app/home/course-list/load-more/load-more.component.html
+++ b/src/app/home/course-list/load-more/load-more.component.html
@@ -1,1 +1,4 @@
-<p>load-more works!</p>
+<button tuiButton class="load-more-btn" appearance="secondary"
+(click)="onClickLoadMore()">
+Load more
+</button>
