--- a/src/app/home/search/search.component.html
+++ b/src/app/home/search/search.component.html
@@ -1,1 +1,20 @@
-<p>search works!</p>
+<div class="search">
+  <div class="search-bar">
+    <tui-input [(ngModel)]="searchValue" class="search-input">
+      <tui-svg src="tuiIconSearch" class="search-element"></tui-svg>
+      Name, fragment or date
+      <input tuiTextfield/>
+
+    </tui-input>
+
+    <button tuiButton class="search-button" size="l" appearance="secondary"
+            (click)="onClickSearch(searchValue)">
+      Search
+    </button>
+  </div>
+
+
+  <button tuiButton icon="tuiIconPlus" class="add-course-button" size="l">
+    Add course
+  </button>
+</div>
