task 2 is in progress

--- a/src/app/home/course-list/load-more/load-more.component.html
+++ b/src/app/home/course-list/load-more/load-more.component.html
@@ -1,4 +1,7 @@
-<button tuiButton class="load-more-btn" appearance="secondary"
-(click)="onClickLoadMore()">
-Load more
+<button
+  tuiButton
+  class="load-more-btn"
+  appearance="secondary"
+  (click)="onClickLoadMore()">
+  Load more
 </button>
