--- a/src/app/home/header/header.component.less
+++ b/src/app/home/header/header.component.less
@@ -1,43 +1,47 @@
 header {
-  position: relative;
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  background-color: #FFFFFF;
+  justify-content: space-between;
+
+  position: relative;
+  background-color: var(--tui-base-01);
   height: 64px;
   padding: 0 28px;
+
+  .logo {
+    display: flex;
+  }
+
+  .auth-group {
+    display: flex;
+    align-items: center;
+
+    .user-info {
+      display: flex;
+      align-items: center;
+
+      .username {
+        margin-right: 4px;
+      }
+
+      .username-icon {
+        margin-right: 4px;
+      }
+    }
+  }
 }
 
 header::after {
   content: "";
   position: absolute;
   inset: 0;
-  box-shadow: 0 4px 24px rgba(0, 0, 0, 0.12);
+  box-shadow: 0 4px 24px var(--tui-secondary-hover);
   z-index: 1;
 }
 
-.logo {
-  display: flex;
-  align-items: flex-start;
-}
 
-.user-info {
-  display: flex;
-  align-items: center;
-  margin-left: auto; /* устанавливаем отступ слева равный остатку места на строке */
-}
 
-.username {
-  margin-right: 24px;
-  margin-left: 4px;
-}
 
-.log-out-btn {
-  display: flex;
-  align-items: center;
-}
 
-.username-icon {
-  width: 16px;
-  height: 16px;
-}
+
+
