--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,15 @@
-<div class="app-container">
+<div class="root">
   <app-header></app-header>
-  <div class="app-content">
-    <div class="content-field">
-      <app-search></app-search>
-      <app-course-list></app-course-list>
-      <app-load-more></app-load-more>
-    </div>
+  <div class="content">
+    <app-search></app-search>
+    <app-course-list></app-course-list>
   </div>
-  <div class="app-footer">
+  <div class="footer">
     <app-footer></app-footer>
   </div>
 </div>
+
+
+
+
+
