task 2 is almost finished

--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -6,9 +6,11 @@
     display: flex;
     flex-direction: column;
 
+    background-color: var(--tui-base-01);
+    height: calc(100vh - 232px);
+
     margin: 0 104px;
-    background-color: white;
-    height: calc(100vh - 168px);
+    padding: 32px 24px;
   }
 
   .footer {
