--- a/src/app/home/search/search.component.less
+++ b/src/app/home/search/search.component.less
@@ -1,34 +1,16 @@
 .search {
-  background-color: #FFFFFF;
-  padding: 0;
-  margin: 0;
-  z-index: 1;
-
   display: flex;
   justify-content: space-between;
-  align-items: center;
 
-  border-bottom: 1px solid #D7D7D7;
+  border-bottom: 1px solid var(--tui-base-04);
 }
 
 .search-bar {
   display: flex;
-  align-items: flex-start;
-  margin-left: 24px;
-  margin-top: 32px;
   margin-bottom: 32px;
-}
 
-.search-input {
-  width: 597px;
-  height: 56px;
-  border-radius: 12px;
-}
-
-.search-button {
-  margin-left: 16px;
-}
-
-.add-course-button {
-  margin-right: 24px;
+  .search-input {
+    width: 579px;
+    margin-right: 16px;
+  }
 }
