task 2 was finished

--- a/src/app/home/search/search.component.less
+++ b/src/app/home/search/search.component.less
@@ -1,8 +1,6 @@
 .search {
   display: flex;
   justify-content: space-between;
-
-  border-bottom: 1px solid var(--tui-base-04);
 }
 
 .search-bar {
@@ -13,4 +11,9 @@
     width: 579px;
     margin-right: 16px;
   }
+}
+
+.divide-line {
+  margin-left: -24px;
+  margin-right: -24px;
 }
