task 2 was finished

--- a/src/styles.less
+++ b/src/styles.less
@@ -1,4 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+@import '@taiga-ui/core/styles/taiga-ui-local.less';
+
 html {
-  background-color: #E5E5E5;
+  background-color: var(--tui-base-03);
 }
