--- a/src/app/home/course-list/course-list.component.html
+++ b/src/app/home/course-list/course-list.component.html
@@ -1,3 +1,6 @@
-<app-course></app-course>
-<app-course></app-course>
+<app-course
+  *ngFor="let course of courses"
+  [course]="course"
+  (courseDeleted)="onCourseDeleted($event)"
+></app-course>
 <app-load-more></app-load-more>
