--- a/src/app/home/course-list/course/course.component.less
+++ b/src/app/home/course-list/course/course.component.less
@@ -24,7 +24,7 @@
     color: var(--tui-text-03);
   }
 
-  .title-and-duration {
+  .title-duration-star {
     display: flex;
     margin-bottom: 12px;
 
@@ -32,6 +32,14 @@
       font-size: 19px;
       font-weight: 800;
       margin-right: 8px;
+    }
+
+    .duration {
+      margin-right: 9px;
+    }
+
+    .icon {
+      color: var(--tui-link-hover);
     }
   }
 
