--- a/src/app/home/course-list/course/course.component.less
+++ b/src/app/home/course-list/course/course.component.less
@@ -6,7 +6,7 @@
   margin-bottom: 20px;
 
   border: 1px solid var(--tui-text-04);
-  box-shadow: 0 4px 24px rgba(0, 0, 0, 0.12);
+  box-shadow: 0 4px 24px var(--tui-secondary-hover);
   border-radius: 8px;
 
   .course-buttons {
