--- a/src/app/home/course-list/course/course.component.less
+++ b/src/app/home/course-list/course/course.component.less
@@ -36,6 +36,9 @@
     margin-bottom: 12px;
 
     .title {
+      display: flex;
+      align-items: center;
+
       font-size: 17px;
       font-weight: bold;
       margin-right: 8px;
