--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -5,6 +5,7 @@
   .content {
     display: flex;
     flex-direction: column;
+    overflow-y: auto;
 
     background-color: var(--tui-base-01);
     height: calc(100vh - 232px);
@@ -16,6 +17,7 @@
   .footer {
     display: flex;
     align-items: center;
+    flex-shrink: 0;
 
     margin: 0 104px;
     height: 104px;
