task 3 is finished

--- a/src/app/home/course-list/course/course.component.html
+++ b/src/app/home/course-list/course/course.component.html
@@ -15,7 +15,7 @@
         ></tui-badge>
       <tui-svg
       src="tuiIconStarLarge"
-      class="icon"
+      class="star"
       *ngIf="course.topRated"
       ></tui-svg>
     </div>
