--- a/src/app/home/course-list/course/course.component.html
+++ b/src/app/home/course-list/course/course.component.html
@@ -1,4 +1,4 @@
-<div class="course">
+<div class="course" *ngIf="course">
   <div class="course-info">
     <div class="date tui-text_body-s-2">{{ course.creationDate }}</div>
     <div class="title-duration-star">
