--- a/src/app/home/search/search.component.html
+++ b/src/app/home/search/search.component.html
@@ -14,6 +14,7 @@
       appearance="secondary"
       class="search-button"
       size="l" tuiButton
+      data-automation-id="search-button"
     >
       Search
     </button>
