--- a/src/app/home/search/search.component.html
+++ b/src/app/home/search/search.component.html
@@ -10,7 +10,7 @@
     </tui-input>
 
     <button
-      (click)="onClickSearch(searchValue)"
+      (click)="onClickSearch()"
       appearance="secondary"
       class="search-button"
       size="l" tuiButton
