--- a/src/app/home/search/search.component.html
+++ b/src/app/home/search/search.component.html
@@ -1,7 +1,7 @@
 <div class="search">
   <div class="search-bar">
     <tui-input
-      [(ngModel)]="searchValue"
+      [(ngModel)]="searchText"
       tuiTextfieldIconLeft="tuiIconSearch"
       class="search-input"
     >
