--- a/src/app/home/course-list/course-list.component.html
+++ b/src/app/home/course-list/course-list.component.html
@@ -1,5 +1,5 @@
 <app-course
-  *ngFor="let course of courses"
+  *ngFor="let course of filteredCourses"
   [course]="course"
   (courseDeleted)="onCourseDeleted($event)"
 ></app-course>
