--- a/src/app/home/course-list/course-list.component.html
+++ b/src/app/home/course-list/course-list.component.html
@@ -1,6 +1,19 @@
-<app-course
-  *ngFor="let course of filteredCourses"
-  [course]="course"
-  (courseDeleted)="onCourseDeleted($event)"
-></app-course>
-<app-load-more></app-load-more>
+<div class="course-list" *ngIf="filteredCourses.length > 0">
+  <app-course
+    *ngFor="let course of filteredCourses"
+    [course]="course"
+    (courseDeleted)="onCourseDeleted($event)"
+  ></app-course>
+  <app-load-more></app-load-more>
+</div>
+<div class="no-data" *ngIf="filteredCourses.length === 0">
+  <tui-marker-icon
+    new
+    mode="link"
+    size="xxl"
+    src="tuiIconAlertCircleLarge"
+    class="icon"
+  ></tui-marker-icon>
+  <p class="text tui-text_h1">No data</p>
+  <p class="advice tui-text_body-s-2">Feel free to add new course</p>
+</div>
