--- a/src/app/home/course-list/course-list.component.html
+++ b/src/app/home/course-list/course-list.component.html
@@ -1,4 +1,4 @@
-<div class="course-list" *ngIf="filteredCourses.length > 0">
+<div class="course-list" *ngIf="filteredCourses.length > 0; else noDataBlock">
   <app-course
     *ngFor="let course of filteredCourses"
     [course]="course"
@@ -6,7 +6,9 @@
   ></app-course>
   <app-load-more></app-load-more>
 </div>
-<div class="no-data" *ngIf="filteredCourses.length === 0">
+
+<ng-template #noDataBlock>
+<div class="no-data">
   <tui-marker-icon
     new
     mode="link"
@@ -17,3 +19,4 @@
   <p class="text tui-text_h1">No data</p>
   <p class="advice tui-text_body-s-2">Feel free to add new course</p>
 </div>
+</ng-template>
