--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,7 @@
 <div class="root">
   <app-header></app-header>
   <div class="content">
-    <app-search (search)="onClickSearch($event)"></app-search>
-    <app-course-list [searchText]="searchText"></app-course-list>
+      <app-courses-page></app-courses-page>
   </div>
   <div class="footer">
     <app-footer></app-footer>
