--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,5 @@
 <tui-root>
-    <ng-container *ngIf="authService.isAuthorized(); else loginPage">
-        <app-courses-page></app-courses-page>
-    </ng-container>
-
+    <app-courses-page *ngIf="isAuthorized; else loginPage"></app-courses-page>
     <ng-template #loginPage>
         <app-login-page></app-login-page>
     </ng-template>
