--- a/src/app/courses-page/courses-page.component.html
+++ b/src/app/courses-page/courses-page.component.html
@@ -1,8 +1,8 @@
 <div class="root">
     <app-header></app-header>
     <div class="content">
-        <app-search (search)="onClickSearch($event)"></app-search>
-        <app-course-list [searchText]="searchText"></app-course-list>
+        <app-search></app-search>
+        <app-course-list></app-course-list>
     </div>
     <div class="footer">
         <app-footer></app-footer>
