--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
 <tui-root>
-    <app-courses-page *ngIf="isAuthorized; else loginPage"></app-courses-page>
+    <app-courses-page *ngIf="(isAuthorized$ | async); else loginPage"></app-courses-page>
     <ng-template #loginPage>
         <app-login-page></app-login-page>
     </ng-template>
 </tui-root>
-
-
