--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,16 +1,16 @@
 <header>
-  <div class="logo">
-    <img src="./assets/logo.svg" alt="Логотип">
-  </div>
-
-  <div class="auth-group">
-    <div class="user-info" *ngIf="username">
-      <img class="username-icon" src="./assets/username-icon.svg" alt="">
-      <span class="username">{{username}}</span>
+    <div class="logo">
+        <img alt="Логотип" src="./assets/logo.svg">
     </div>
 
-    <div class="log-out-btn">
-      <a tuiLink icon="tuiIconCheckCircle" iconAlign="left" (click)="logout()">Log out</a>
+    <div class="auth-group">
+        <div class="user-info">
+            <img alt="" class="username-icon" src="./assets/username-icon.svg">
+            <span class="username">{{username$ | async}}</span>
+        </div>
+
+        <div class="log-out-btn">
+            <a (click)="logout()" icon="tuiIconCheckCircle" iconAlign="left" tuiLink>Log out</a>
+        </div>
     </div>
-  </div>
 </header>
