--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
     <ng-template #loginPage>
         <app-login-page></app-login-page>
     </ng-template>
+    <app-loading-overlay></app-loading-overlay>
 </tui-root>
