--- a/src/app/loading-overlay/loading-overlay.component.html
+++ b/src/app/loading-overlay/loading-overlay.component.html
@@ -1,1 +1,3 @@
-<p>loading-overlay works!</p>
+<div class="overlay-container" *ngIf="isLoading$ | async">
+    <tui-loader [overlay]="true" [size]="'xxl'" class="centered-element"></tui-loader>
+</div>
