--- a/src/app/courses-page/course-list/course-list.component.html
+++ b/src/app/courses-page/course-list/course-list.component.html
@@ -1,6 +1,6 @@
-<div class="course-list" *ngIf="(courses$ | async)!.length > 0; else noDataBlock">
+<div class="course-list" *ngIf="hasCourses$ | async; else noDataBlock">
     <app-course
-        *ngFor="let course of courses$ | async"
+        *ngFor="let course of courses$ | async; trackBy: trackByCourseId"
         [course]="course"
         (courseDeleted)="onCourseDeleted($event, deleteDialog)"
     ></app-course>
