--- a/src/app/courses-page/search/search.component.html
+++ b/src/app/courses-page/search/search.component.html
@@ -15,6 +15,7 @@
         icon="tuiIconPlus"
         size="l"
         tuiButton
+        (click)="onAddCourseClick()"
     >
         Add course
     </button>
