--- a/src/app/courses-page/courses-page.component.html
+++ b/src/app/courses-page/courses-page.component.html
@@ -1,10 +1,14 @@
-<div class="root">
-    <app-header></app-header>
-    <div class="content">
-        <app-search></app-search>
-        <app-course-list></app-course-list>
-    </div>
-    <div class="footer">
-        <app-footer></app-footer>
+<div *ngIf="!showAddCoursePage">
+    <div class="root">
+        <app-header></app-header>
+        <div class="content">
+            <app-search (addCourseClicked)="onAddCourseClicked()"></app-search>
+            <app-course-list></app-course-list>
+        </div>
+        <div class="footer">
+            <app-footer></app-footer>
+        </div>
     </div>
 </div>
+
+<app-add-course-page *ngIf="showAddCoursePage"></app-add-course-page>
