--- a/src/app/courses-page/course-list/course/course.component.html
+++ b/src/app/courses-page/course-list/course/course.component.html
@@ -34,6 +34,7 @@
       icon="tuiIconEdit3Large"
       size="m"
       appearance="secondary"
+      (click)="onEditCourse(course.id)"
     >
       Edit
     </button>
