--- a/src/app/edit-course-page/edit-course-page.component.html
+++ b/src/app/edit-course-page/edit-course-page.component.html
@@ -1,1 +1,77 @@
-<p>edit-course-page works!</p>
+<div class="root">
+    <app-header></app-header>
+    <div class="content">
+        <div class="edit-course">
+            <h1>Edit course</h1>
+
+            <table class="tui-table course-info tui-table_size_l">
+                <tbody>
+                <tr class="tui-table__tr tui-table__tr_border_none tui-table__tr_hover_disabled">
+                    <td class="tui-table__td left-column">Title</td>
+                    <td class="tui-table__td">Video Course 1</td>
+                </tr>
+                <tr class="tui-table__tr tui-table__tr_border_top tui-table__tr_hover_disabled">
+                    <td class="tui-table__td left-column">Date</td>
+                    <td class="tui-table__td">12.03.2021</td>
+                </tr>
+                <tr class="tui-table__tr tui-table__tr_border_top tui-table__tr_hover_disabled">
+                    <td class="tui-table__td left-column">Duration</td>
+                    <td class="tui-table__td">1h 58 min</td>
+                </tr>
+                </tbody>
+            </table>
+
+            <div class="description">
+                <label tuiLabel="Description">
+                    <tui-text-area
+                        [(ngModel)]="course.description"
+                        [tuiTextfieldCleaner]="true"
+                        [tuiTextfieldLabelOutside]="true"
+                        class="description-textarea"
+                        required
+                    >
+                    </tui-text-area>
+                </label>
+            </div>
+            <div class="authors">
+                <label tuiLabel="Authors">
+                    <tui-multi-select
+                        [(ngModel)]="course.authors"
+                        [(search)]="search"
+                        [tuiTextfieldLabelOutside]="true"
+                        class="authors-input"
+                    >
+                        <tui-data-list-wrapper
+                            *tuiDataList
+                            [items]="filter(search)"
+                            tuiMultiSelectGroup
+                        ></tui-data-list-wrapper>
+                    </tui-multi-select>
+                </label>
+            </div>
+            <div class="buttons">
+                <button
+                    appearance="primary"
+                    class="save-btn"
+                    size="l"
+                    tuiButton
+                    (click)="onClickSave()"
+                >
+                    Save
+                </button>
+                <button
+                    appearance="secondary"
+                    class="cancel-btn"
+                    size="l"
+                    tuiButton
+                    (click)="onClickCancel()"
+                >
+                    Cancel
+                </button>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <app-footer></app-footer>
+    </div>
+</div>
