--- a/src/app/edit-course-page/edit-course-page.component.html
+++ b/src/app/edit-course-page/edit-course-page.component.html
@@ -38,7 +38,7 @@
                     <tui-multi-select
                         (searchChange)="onSearchChange($event)"
                         *tuiLet="items$ | async as items"
-                        [formControl]="authorsValue"
+                        [formControl]="authorsFormControl"
                         [expandable]="true"
                         [tuiTextfieldLabelOutside]="true"
                         (keydown.enter)="onEnterCreateAuthor($event);"
